--- a/pm2.config.json
+++ b/pm2.config.json
@@ -1,9 +1,10 @@
 {
-    "app": [
-        {
-            "name": "RealWorld",
-            "script": "npm",
-            "arts": "start"
-        }
+    "apps": [
+      {
+        "name": "RealWorld",
+        "script": "npm",
+        "args": "start"
+      }
     ]
-}
+  }
+  
